--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -21,3 +21,12 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: 123
       ME_CONFIG_MONGODB_URL: mongodb://root:123@mongo:27017/
+
+  app:
+    build: ../
+    restart: always
+    ports:
+      - "80:8181"
+    environment:
+      NODE_ENV: production
+    command: npm start
